# py2dataclasses

./: .gitignore  LICENSE  PYTHON2_USAGE.md  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.run/: Python2 tests in test_Dataclasses_py27 with python 3.run.xml  Python2 tests in test_Dataclasses_py27.run.xml  Python3 tests in test_Dataclasses_py314 with python 2.run.xml  Python3 tests in test_Dataclasses_py314.run.xml  Unittests in __init__.py.run.xml  [py2] [backport] test_Dataclasses_py27.run.xml  [py3] [ original ] test_Dataclasses_py27.run.xml  [py3] [ original ] test_Dataclasses_py314.run.xml  [py3] [backport] test_Dataclasses_py27.run.xml  [py3] [backport] test_Dataclasses_py314.run.xml  analyze_tests.run.xml  tox.run.xml
py2dataclasses/: __init__.py  dataclasses.py
src/: dataclasses.py  py2dataclasses.py
test/: analyze_tests.py  test_Python3_tests_on_py2.py
tests/: README.md  __init__.py  _fixtures_compat_backport_to_stdlib.py  _fixtures_compat_stdlib_to_backport.py  _fixtures_loader.py  _manual.py  _xmlprocessor.py  _xmlrunner.py  analyze_tests.py  dataclass_module_1.py  load_fixtures.py  test_Dataclasses_py27_backport_py2.py  test_Dataclasses_py27_backport_py3.py  test_Dataclasses_py27_original_py3.py  test_Dataclasses_py314_backport_py3.py  test_Python2_tests_on_py3.py  test_Python3_tests_on_py2.py  test_compat_backport.py  test_compat_stdlib.py  test_dataclasses.py  test_dump.py  test_field_descriptor.py  test_imports.py  test_load.py  test_load_basic.py  test_load_collect.py  test_load_nested.py  test_load_typevars.py  test_native_on_nativelib.py  test_native_on_portedlib.py  test_ported_on_nativelib.py  test_ported_on_portedlib.py  tests_analyzer.py
tools/: analyze_tests.py
(+135 files in other folders)
