[tool.poetry]
name = "py2dataclasses"
version = "0.0.1"
description = "Somewhat PEP-557 compatible python 2.7 dataclasses port"
authors = ["nev3rfail"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "==2.7.18"

[tool.poetry.dev-dependencies]

#[build-system]
#requires = ["poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"